--- a/2_structured_data_tree_cadastre_konstanz.ipynb
+++ b/2_structured_data_tree_cadastre_konstanz.ipynb
@@ -750,7 +750,7 @@
     }
    },
    "source": [
-    "Obviously, German names are less specific (there are more items of \"Platane\" than \"Platanus x acerifolia\"). To avoid inconsistencies will use only the Latin names in the next steps. Because not everybody knows Latin well enough or studied botanology, let's prepare a translation table to see the Latin and German names site by site. We will later look how we could get the tree names in other languages as well."
+    "Obviously, German names are less specific (there are more items of \"Platane\" than \"Platanus x acerifolia\"). To avoid inconsistencies we'll use the Latin names in the next steps. Because not everybody knows Latin well enough or studied botanology, let's prepare a translation table to see the Latin and German names site by site. We will later look how we could get the tree names in other languages as well."
    ]
   },
   {
