Notebook "2. Working with Structured Data": - clean up data and translate column names - provide short description of the tree cadastre data

--- a/3_twitter_api.ipynb
+++ b/3_twitter_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "confident-weapon",
+   "id": "choice-prevention",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -23,7 +23,7 @@
     "\n",
     "The [Application Programming\n",
     "Interface](https://en.wikipedia.org/wiki/API) (API) allows computer\n",
-    "programs to interact with software libraries or services (eg. Twitter\n",
+    "programs to interact with software libraries (the [pandas API](https://pandas.pydata.org/pandas-docs/stable/reference/index.html)) or services (eg. Twitter\n",
     "or Mediawiki) in a similar way a [user\n",
     "interface](https://en.wikipedia.org/wiki/User_interface) allows humans\n",
     "to interact with computers.\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behind-welsh",
+   "id": "homeless-blake",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outside-mercy",
+   "id": "specific-strategy",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
