Add notebook "1. Warm Up and Set Up"
Add PDF/LaTeX handout template and makefile for conversion
- fix overlong lines in source code not shown in PDF handout

--- a/2_structured_data_tree_cadastre_konstanz.ipynb
+++ b/2_structured_data_tree_cadastre_konstanz.ipynb
@@ -1133,9 +1133,11 @@
     }
    ],
    "source": [
-    "tree_name_translation = df.loc[df['Name_lat'].isin(top_trees.index), ['Name_lat', 'Name_dt']]\n",
+    "tree_name_translation = df.loc[df['Name_lat'].isin(top_trees.index),\n",
+    "                               ['Name_lat', 'Name_dt']]\n",
     "tree_name_translation['count'] = 1\n",
-    "tree_name_translation.groupby(['Name_lat', 'Name_dt']).sum().sort_values('count', ascending=False)"
+    "tree_name_translation.groupby(['Name_lat', 'Name_dt']).sum() \\\n",
+    "    .sort_values('count', ascending=False)"
    ]
   },
   {
@@ -1188,7 +1190,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "df.plot(kind='scatter', x='trunk perimeter (cm)', y='height (m)', s='treetop diameter (m)')"
+    "df.plot(kind='scatter', x='trunk perimeter (cm)',\n",
+    "        y='height (m)', s='treetop diameter (m)')"
    ]
   },
   {
@@ -1230,7 +1233,8 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows=5, ncols=4, sharex=True, sharey=True, squeeze=False, figsize=[20,25])\n",
+    "fig, axes = plt.subplots(nrows=5, ncols=4, sharex=True, sharey=True,\n",
+    "                         squeeze=False, figsize=[20,25])\n",
     "\n",
     "n = 0\n",
     "for tree in top_trees.index.to_list():\n",
@@ -1338,7 +1342,8 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows=1, ncols=2, sharex=True, sharey=True, squeeze=False, figsize=[10,4])\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=2, sharex=True, sharey=True,\n",
+    "                         squeeze=False, figsize=[10,4])\n",
     "\n",
     "n = 0\n",
     "for tree in ['Salix alba', 'Malus domestica']:\n",
@@ -2026,9 +2031,11 @@
     "### Remark: Advanced JSON processing with `jq`\n",
     "\n",
     "Processing deeply nested JSON is cumbersome because the Pythone code may also require nested loops or recursive function calls. The JSON processor [jq](https://stedolan.github.io/jq/) allows for easy processing (filter and transform) of JSON data. There exist [Python bindings](https://en.wikipedia.org/wiki/Language_binding) but it is primarily a command-line tool:\n",
+    "\n",
     "1. download one tree record from Wikispecies using [curl](https://curl.se/):\n",
     "   ```\n",
-    "   curl 'https://species.wikimedia.org/w/api.php?action=query&format=json&prop=iwlinks|langlinks|description&lllimit=200&llprop=url|langname&titles=Quercus_robur' >data/wikispecies-quercus-robur.json\n",
+    "   curl 'https://species.wikimedia.org/w/api.php?action=query&format=json&prop=iwlinks|langlinks|description&lllimit=200&llprop=url|langname&titles=Quercus_robur' \\\n",
+    "       >data/wikispecies-quercus-robur.json\n",
     "   ```\n",
     "2. inspect the JSON result (nicely formatted):\n",
     "   ```\n",
@@ -2082,7 +2089,10 @@
     "import jq\n",
     "\n",
     "q = jq.compile('.[\"query\"][\"pages\"][][\"langlinks\"][] | [.[\"lang\",\"*\"]]')\n",
-    "translations_quercus_robur = dict(q.input(json.load(open('data/quercus_robur-wikimedia-species.json'))).all())\n",
+    "translations_quercus_robur = dict(\n",
+    "    q.input(\n",
+    "        json.load(\n",
+    "            open('data/quercus_robur-wikimedia-species.json'))).all())\n",
     "translations_quercus_robur['fr']"
    ]
   },
@@ -2100,20 +2110,6 @@
     "- [Pandas getting started](https://pandas.pydata.org/docs/getting_started/index.html)\n",
     "- [matplotlib cheatsheet](https://raw.githubusercontent.com/matplotlib/cheatsheets/master/cheatsheets.pdf) ([beginners sheet](https://raw.githubusercontent.com/matplotlib/cheatsheets/master/handout-beginner.pdf))\n",
     "- [processing JSON data](https://datacarpentry.org/python-socialsci/07-json/index.html) from the course \"Data Analysis and Visualization with Python for Social Scientists\" (https://datacarpentry.org/python-socialsci/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "certified-content",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "TODO: ideas\n",
-    "- linear regression\n",
-    "- plotting on a map"
    ]
   }
  ],
