--- a/3_twitter_api.ipynb
+++ b/3_twitter_api.ipynb
@@ -26,22 +26,41 @@
     "programs to interact with software libraries (the [pandas API](https://pandas.pydata.org/pandas-docs/stable/reference/index.html)) or services (eg. Twitter\n",
     "or Mediawiki) in a similar way a [user\n",
     "interface](https://en.wikipedia.org/wiki/User_interface) allows humans\n",
-    "to interact with computers.\n",
-    "\n",
-    "\n",
+    "to interact with computers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "loving-gibraltar",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Why social media and why [Twitter](https://twitter.com/)?\n",
     "\n",
     "Social media is an important data source for social science research:\n",
-    " “social media platforms are, in one sense, vast collections of\n",
+    "\n",
+    "> social media platforms are, in one sense, vast collections of\n",
     "  freely available unscripted opinions, experiences and insights on\n",
     "  any number of topics“ (Phillip D. Brooker\n",
     "  [#1](#brooker-python-social-scientists))\n",
     "\n",
     "The [Twitter API](https://twitter.com/TwitterAPI) is easy to set up\n",
     "and usage is less restrictive compared to the APIs of other social\n",
-    "media platforms.\n",
-    "\n",
-    "\n",
+    "media platforms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "demonstrated-amendment",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Get Access to the Twitter API\n",
     "\n",
     "Before [apply for access](https://developer.twitter.com/en/apply-for-access) you definitely should read about the [restrictions](https://developer.twitter.com/en/developer-terms/more-on-restricted-use-cases) on using and sharing Twitter data. You may also start browsing the [API documentation](https://developer.twitter.com/en/docs).\n",
@@ -49,6 +68,7 @@
     "After having registered for an API account, you need to follow the documentation about [getting started](https://developer.twitter.com/en/docs/twitter-api/getting-started/getting-access-to-the-twitter-api).\n",
     "\n",
     "Note that\n",
+    "\n",
     "- the registration and setup process requires some time\n",
     "- the examples given below can only replayed if you have registered for the Twitter API"
    ]
