Notebook "2. Working with Structured Data" - add example plotting data on geographic maps
Add handout (PDF)

--- a/python-workshop-2021-handout.tex
+++ b/python-workshop-2021-handout.tex
@@ -135,7 +135,13 @@
     \renewcommand{\LaTeX}{\textrm{\Oldlatex}}
     % Document parameters
     % Document title
-    \title{Workshop ``Introduction to Python'' 2021}
+    \title{{\sf\textbf{Workshop ``Introduction to Python''}}\\
+      \vfil\small organized by the\\
+      Cluster of Excellence “The Politics of Inequality” at the\\
+      University of Konstanz\\
+      in cooperation with the\\
+      Zeppelin University Friedrichshafen}
+    \date{July 8 and 12, 2021}
     
     
     
@@ -278,6 +284,7 @@
 
     \include{tmp/1_warmup_and_setup}
     \include{tmp/2_structured_data_tree_cadastre_konstanz}
+    \includegraphics[angle=90,scale=1.6]{figures/trees_folium.png}
     \include{tmp/3_twitter_api}
     
 \end{document}
