Fix typos and formatting

--- a/1_warmup_and_setup.ipynb
+++ b/1_warmup_and_setup.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "##### Mutable and Immutable Data Types\n",
     "- tuples are immutable, i.e. once created you cannot change the content\n",
-    "- lists, dictionaries, sets are mutableg\n",
+    "- lists, dictionaries, sets are mutable\n",
     "- numbers and strings are also immutable\n",
     "- immutable data types avoid programming errors and also allow for certain optimizations"
    ]
@@ -424,6 +424,7 @@
     "#### Functions\n",
     "\n",
     "Functions are...\n",
+    "\n",
     "- code blocks only executed when called\n",
     "- reusable (can be called repeatedly from various places in the code)\n",
     "- the primary method to organize code and make it readable and understandable"
@@ -496,6 +497,7 @@
     "### Classes and Objects\n",
     "\n",
     "The [object-oriented programming](https://en.wikipedia.org/wiki/Object-oriented_programming) paradigm combines data and code in \"objects\". Every \"object\" is an instance of a \"class\". The \"class\" defines\n",
+    "\n",
     "- the data types and possible values an object of the class holds\n",
     "- \"methods\" - functions to read, write or interact with data values hold by the object\n",
     "\n",
@@ -611,7 +613,7 @@
     }
    },
    "source": [
-    "What could be methods provided by the `list` built-in class? Think about it before calling `help(list)`!"
+    "What could be the methods provided by the `list` built-in class? Think about it before calling `help(list)`!"
    ]
   },
   {
@@ -801,7 +803,9 @@
     }
    },
    "source": [
-    "... but before run `pip list` or `pip show matplotlib` (or just try `import matplotlib`) to figure out whether it is already installed."
+    "... but before run `pip list` or `pip show matplotlib` (or just try `import matplotlib`) to figure out whether it is already installed.\n",
+    "\n",
+    "A good and common practice is to list all modules required by a project in a file `requirements.txt`. The entire list of requirements can then be installed by `pip install -r requirements.txt`."
    ]
   },
   {
@@ -862,8 +866,7 @@
     "   deactivate\n",
     "   ```\n",
     "\n",
-    "[Docker](https://docs.docker.com/get-started/) allows to bundle a Python interpreter, specific modules and additional software, pack it as runtime image and run it in a \"container\".\n",
-    "\n"
+    "If more than Python modules are project-specific: [Docker](https://docs.docker.com/get-started/) allows to bundle a Python interpreter (eg. an older version), specific modules and additional software, pack it as runtime image and run it in a \"container\" without the need to install anything on the host system."
    ]
   }
  ],
