Bug fix in Sentiment class definition
Update and complete global (all notebooks) requirements.txt

--- a/1_warmup_and_setup.ipynb
+++ b/1_warmup_and_setup.ipynb
@@ -650,7 +650,7 @@
     "        self.value = value\n",
     "\n",
     "    def get(self):\n",
-    "        return self.happy_or_not\n",
+    "        return self.value\n",
     "\n",
     "    def __repr__(self):\n",
     "        return self.value\n",
