Notebook "5. NLP + ML"

--- a/4_web_scraping.ipynb
+++ b/4_web_scraping.ipynb
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "polyphonic-wednesday",
+   "id": "essential-passing",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-invitation",
+   "id": "important-equipment",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1334,6 +1334,18 @@
     "- some list-like data, for example the fact that one MP can have multiple names\n",
     "\n",
     "Instead of coding the conversion in Python: with [XSLT](https://en.wikipedia.org/wiki/XSLT) there is a dedicated language for transforming XML documents into other document formats."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "heavy-bride",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The [Open Discourse](https://opendiscourse.de/) projects hosts the proceedings of the German parliament and also a list of MPs in data formats easy to consume. See the [Open Discourse data sets](https://dataverse.harvard.edu/dataverse/opendiscourse) page."
    ]
   }
  ],
