Notebook "4. Web Scraping" - add section about browser automation using Playwright

--- a/4_web_scraping.ipynb
+++ b/4_web_scraping.ipynb
@@ -110,12 +110,7 @@
     "- simulate user interaction (clicks, input, scrolling)\n",
     "- take screenshots\n",
     "- access the DOM tree or the HTML modified by executed Javascript and user interactions\n",
-    "  from/in the browser to extract data\n",
-    "\n",
-    "Browser automation with Python\n",
-    "- [Selenium](https://pypi.org/project/selenium/)\n",
-    "  - nice example: [impf-botpy](https://github.com/alfonsrv/impf-botpy)\n",
-    "- [Playwright](https://playwright.dev/python/docs/intro)"
+    "  from/in the browser to extract data"
    ]
   },
   {
@@ -1346,6 +1341,99 @@
    },
    "source": [
     "The [Open Discourse](https://opendiscourse.de/) projects hosts the proceedings of the German parliament and also a list of MPs in data formats easy to consume. See the [Open Discourse data sets](https://dataverse.harvard.edu/dataverse/opendiscourse) page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "moved-northwest",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Browser automation with Python\n",
+    "\n",
+    "- [Selenium](https://pypi.org/project/selenium/)\n",
+    "  - nice example: [impf-botpy](https://github.com/alfonsrv/impf-botpy)\n",
+    "- [Playwright](https://playwright.dev/python/docs/intro)\n",
+    "  - [Playwright on pypi](https://pypi.org/project/playwright/) including nice examples (some cited below)\n",
+    "  \n",
+    "Note: Playwright does not run in a Jupyter notebook. We'll run the scripts directly in the Python interpreter.\n",
+    "\n",
+    "Installation:\n",
+    "```\n",
+    "pip install playwright\n",
+    "playwright install\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "portuguese-ceremony",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Take a screenshot using two different browsers:\n",
+    "\n",
+    "```python\n",
+    "from playwright.sync_api import sync_playwright\n",
+    "\n",
+    "with sync_playwright() as p:\n",
+    "    for browser_type in [p.chromium, p.firefox]:\n",
+    "        browser = browser_type.launch()\n",
+    "        page = browser.new_page()\n",
+    "        page.goto('http://whatsmyuseragent.org/')\n",
+    "        _ = page.screenshot(path=f'figures/example-{browser_type.name}.png')\n",
+    "        browser.close()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "subtle-surge",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Record user interactions (mouse clicks, keyboard input) and create Python code to replay the recorded actions:\n",
+    "```\n",
+    "playwright codegen https://www.bundestag.de/abgeordnete/biografien\n",
+    "```\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "broke-force",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from playwright.sync_api import sync_playwright\n",
+    "\n",
+    "def run(playwright):\n",
+    "    browser = playwright.chromium.launch(headless=False)\n",
+    "    context = browser.new_context(viewport={'height': 1080, 'width': 1920})\n",
+    "    page = context.new_page()\n",
+    "    page.goto(\"https://www.bundestag.de/abgeordnete/biografien\")\n",
+    "    while True:\n",
+    "        try:\n",
+    "            sleep(3)\n",
+    "            page.click(\"button:has-text(\\\"Vor\\\")\")\n",
+    "        except Exception:\n",
+    "            break\n",
+    "\n",
+    "with sync_playwright() as p:\n",
+    "    run(p)"
    ]
   }
  ],
