Notebook "5. NLP + ML" - add note about fine-tuning transformers

--- a/5_nlp_ml.ipynb
+++ b/5_nlp_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "straight-conviction",
+   "id": "applicable-newsletter",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitted-german",
+   "id": "australian-community",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-renaissance",
+   "id": "alike-casting",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-prevention",
+   "id": "animated-advance",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dress-publication",
+   "id": "atomic-activity",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "major-judge",
+   "id": "excess-program",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "stone-malta",
+   "id": "green-tolerance",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "architectural-effect",
+   "id": "stylish-zealand",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "mature-aluminum",
+   "id": "inside-christianity",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "offshore-austin",
+   "id": "guilty-combining",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "intense-species",
+   "id": "varying-posting",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "wireless-crime",
+   "id": "external-garbage",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "previous-banks",
+   "id": "dominant-knife",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "blond-smile",
+   "id": "still-forward",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "hawaiian-mustang",
+   "id": "determined-mumbai",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-hollow",
+   "id": "aggregate-phrase",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "guided-intensity",
+   "id": "handled-carpet",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "decent-sampling",
+   "id": "assured-malawi",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dimensional-section",
+   "id": "charitable-worst",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hispanic-messenger",
+   "id": "developmental-bankruptcy",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "premier-history",
+   "id": "vulnerable-canada",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "relevant-attendance",
+   "id": "liberal-essex",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "coordinate-master",
+   "id": "tutorial-initial",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "unusual-fifteen",
+   "id": "biblical-kinase",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "civic-bailey",
+   "id": "understanding-association",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "daily-anatomy",
+   "id": "funded-cotton",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "assured-territory",
+   "id": "pending-linux",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "logical-stephen",
+   "id": "driving-champagne",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "pregnant-fossil",
+   "id": "painted-trunk",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "hundred-bathroom",
+   "id": "hybrid-economy",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "daily-discovery",
+   "id": "authorized-intention",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "recreational-hindu",
+   "id": "close-instrument",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "broad-tender",
+   "id": "present-essay",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "psychological-sally",
+   "id": "operational-cooling",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "powerful-meeting",
+   "id": "attended-domain",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "spare-collaboration",
+   "id": "confidential-making",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "narrow-quick",
+   "id": "environmental-birthday",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ambient-honor",
+   "id": "adapted-adams",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "flexible-momentum",
+   "id": "iraqi-values",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "lightweight-determination",
+   "id": "biological-corruption",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1157,6 +1157,28 @@
    ],
    "source": [
     "p(\"some in Germany feel they have reached greater levels of economic equality without having\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "immune-wednesday",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Transformers can be \"fine-tuned\" to a specific task, see https://huggingface.co/transformers/training.html\n",
+    "Adding a task-specific head on top of a pre-trained transformer can overcome the problem of not enough\n",
+    "training data. Pre-training unsupervised on large amounts of data On top of the pre-trained model\n",
+    "  For example, you want to classify Tweets by their sentiment (positive or negative emotion).\n",
+    "  You might be able to manually label 1000s of Tweets for training, however this is by far not sufficient for a model to cope with the vocabularies and variety of natural language.\n",
+    "  For example, RoBERTa uses 160 GiB of text for pre-training.\n",
+    "\n",
+    "- \n",
+    "  - potential tasks: text classification (including sentiment analysis), text generation and summarization, question answering, machine translation, etc. Also image classification ...\n",
+    "\n",
+    "\n"
    ]
   }
  ],
