Notebook "4. Web Scraping" Notebook "5. NLP + ML" - completions (eg. add section about boilerplate removal) - add scripts to run playwright from command-line

--- a/5_nlp_ml.ipynb
+++ b/5_nlp_ml.ipynb
@@ -38,8 +38,8 @@
     "\n",
     "NLP modules for Python:\n",
     "\n",
-    "- [spaCy](https://spacy.io/) ([spaCy on pypi](https://pypi.org/project/spacy/))\n",
-    "- [NLTK](https://www.nltk.org/) ([NLTK on pypi](https://pypi.org/project/nltk/))\n"
+    "- [spaCy](https://spacy.io/) or [spaCy on pypi](https://pypi.org/project/spacy/)\n",
+    "- [NLTK](https://www.nltk.org/) or [NLTK on pypi](https://pypi.org/project/nltk/)\n"
    ]
   },
   {
