Update handout (PDF)

--- a/5_nlp_ml.ipynb
+++ b/5_nlp_ml.ipynb
@@ -235,6 +235,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "photographic-manufacturer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install fasttext"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "varying-posting",
    "metadata": {
@@ -465,7 +475,7 @@
     }
    ],
    "source": [
-    "# the fastText command-line tool has a nice output formatter\n",
+    "# in case the fastText command-line tool is installed: it has a nice output formatter\n",
     "!fasttext test-label \\\n",
     "   data/kaggle-jigsaw-toxic/model.bin \\\n",
     "   data/kaggle-jigsaw-toxic/test.txt"
@@ -498,7 +508,6 @@
    },
    "outputs": [],
    "source": [
-    "%%script false --no-raise-error\n",
     "!pip install transformers\n",
     "!pip install tensorflow\n",
     "!pip install \"transformers[sentencepiece]\""
@@ -1168,17 +1177,7 @@
     }
    },
    "source": [
-    "Transformers can be \"fine-tuned\" to a specific task, see https://huggingface.co/transformers/training.html\n",
-    "Adding a task-specific head on top of a pre-trained transformer can overcome the problem of not enough\n",
-    "training data. Pre-training unsupervised on large amounts of data On top of the pre-trained model\n",
-    "  For example, you want to classify Tweets by their sentiment (positive or negative emotion).\n",
-    "  You might be able to manually label 1000s of Tweets for training, however this is by far not sufficient for a model to cope with the vocabularies and variety of natural language.\n",
-    "  For example, RoBERTa uses 160 GiB of text for pre-training.\n",
-    "\n",
-    "- \n",
-    "  - potential tasks: text classification (including sentiment analysis), text generation and summarization, question answering, machine translation, etc. Also image classification ...\n",
-    "\n",
-    "\n"
+    "Transformers can be \"fine-tuned\" to a specific task, see [training of transformers](https://huggingface.co/transformers/training.html). Adding a task-specific head to a transformer pre-trained on large amounts of training data (usually 100 GBs or even TBs of text) saves resources spent for training and can overcome the problem of not enough training data. Manually labelling training data is expensive and naturally puts a limit on the amount of training data. But even if the vocabulary in the training data is limited, there's a good chance that the pre-trained transformer has seen the unknown words in the huge data used for pre-training."
    ]
   }
  ],
