--- a/python-workshop-2021-handout.tex
+++ b/python-workshop-2021-handout.tex
@@ -286,6 +286,8 @@
     \include{tmp/2_structured_data_tree_cadastre_konstanz}
     \includegraphics[angle=90,scale=1.6]{figures/trees_folium.png}
     \include{tmp/3_twitter_api}
+    \include{tmp/4_web_scraping}
+    \include{tmp/5_nlp_ml}
     
 \end{document}
   
