Notebook "1. Warm Up and Set Up" - add section about exception handling - add Google Colab as platform to run Python / Jupyter notebooks

--- a/1_warmup_and_setup.ipynb
+++ b/1_warmup_and_setup.ipynb
@@ -23,6 +23,7 @@
     "  - editors, IDEs\n",
     "  - Jupyter notebooks, Anaconda\n",
     "  - virtual environment, Docker\n",
+    "  - Google Colaboratory\n",
     "\n",
     "## Python Puzzles / Recap\n",
     "\n",
@@ -462,9 +463,9 @@
     "    \"\"\"Ask whether X called me\"\"\"\n",
     "    print(x, \"called me?\")\n",
     "\n",
-    "fun()\n",
-    "fun('Who')\n",
-    "fun(x='They')"
+    "fun()         # use default\n",
+    "fun('Who')    # positional argument\n",
+    "fun(x='They') # named \"keyword\" argument"
    ]
   },
   {
@@ -483,6 +484,18 @@
     "\n",
     "question = fun('Who')\n",
     "question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "latin-prerequisite",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Functions may return a single value to the caller. Tuples (or lists, dictionaries, etc.) can be used to return multiple values. A return statement is optional. Multiple return statements in if-branches are possible."
    ]
   },
   {
@@ -517,6 +530,7 @@
    },
    "outputs": [],
    "source": [
+    "s = 'foo'\n",
     "s.capitalize() # call a method of a string object"
    ]
   },
@@ -670,6 +684,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "hourly-certificate",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Exceptions\n",
+    "\n",
+    "It isn't easy maybe even impossible to foresee all special cases during the execution of a computer program. [Exceptions](https://docs.python.org/3/tutorial/errors.html#exceptions) offer a way to handle unforeseen conditions, for example the following erroneous or malicious input to our sentiment guesser:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "personal-garlic",
@@ -680,7 +708,30 @@
    },
    "outputs": [],
    "source": [
-    "im_feeling = Sentiment('sick')"
+    "im_feeling = Sentiment.guess(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "billion-immunology",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "im_feeling = Sentiment('neutral')\n",
+    "\n",
+    "try:\n",
+    "    im_feeling = Sentiment.guess(0)\n",
+    "    # continue using im_feeling\n",
+    "except Exception as e:\n",
+    "    print('Got exception:', e)\n",
+    "\n",
+    "# the program continues\n",
+    "print(im_feeling)"
    ]
   },
   {
@@ -805,7 +856,7 @@
    "source": [
     "... but before run `pip list` or `pip show matplotlib` (or just try `import matplotlib`) to figure out whether it is already installed.\n",
     "\n",
-    "A good and common practice is to list all modules required by a project in a file `requirements.txt`. The entire list of requirements can then be installed by `pip install -r requirements.txt`."
+    "A good and common practice is to list all modules required by a project in a file `requirements.txt`. The entire list of requirements can then be installed by `pip install -r requirements.txt`. Also this project ships with a [requirements.txt](./requirements.txt)."
    ]
   },
   {
@@ -822,7 +873,7 @@
     "### The Python Interpreter\n",
     "\n",
     "- installed from [python.org](https://docs.python.org/3/using/index.html)\n",
-    "- on Linux: already installed or installable as package of the Linux Distribution (Debina, Ubuntu, Red Hat, SuSE, etc.)\n",
+    "- on Linux: already installed or installable as package of the Linux Distribution (Debian, Ubuntu, Red Hat, SuSE, etc.)\n",
     "- otherwise: it's recommended to rely on a distribution which bundles the Python interpreter with common Python modules and tools - esp. [Anaconda](https://docs.anaconda.com/anaconda/), a distribution of Python and R for scientific computing\n",
     "\n",
     "### Jupyter Notebooks\n",
@@ -866,7 +917,21 @@
     "   deactivate\n",
     "   ```\n",
     "\n",
-    "If more than Python modules are project-specific: [Docker](https://docs.docker.com/get-started/) allows to bundle a Python interpreter (eg. an older version), specific modules and additional software, pack it as runtime image and run it in a \"container\" without the need to install anything on the host system."
+    "If more than Python modules are project-specific: [Docker](https://docs.docker.com/get-started/) allows to bundle a Python interpreter (eg. an older version), specific modules and additional software, pack it as runtime image and run it in a \"container\" without the need to install anything on the host system.\n",
+    "\n",
+    "\n",
+    "### Google Colaboratory\n",
+    "\n",
+    "[Google Colaboratory](https://colab.research.google.com/) or \"Colab\" is a Jupyter notebook environment running in the Google cloud. The notebooks are stored on Google Drive. Basic usage is free but requires a Google user account. The paid \"Colab Pro\" allows to use more hardware resources (RAM, CPU, GPU, TPU) and to run the notebooks without being connected to a web browser.\n",
+    "\n",
+    "Colab supports [loading notebooks on Github](https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb). To load one of the workshop notebooks, please navigate to https://colab.research.google.com/github/sebastian-nagel/introduction-to-python/blob/main/.\n",
+    "\n",
+    "Running a notebook in the cloud requires that analyzed data is uploaded to the cloud or is available online. This might be a hurdle if the data is private or sensitive. In order to load the workshop data from Github into the workspace of a Colab notebook, simply add a cell to the beginning of a notebook with the following two instructions:\n",
+    "\n",
+    "```\n",
+    "!git clone https://github.com/sebastian-nagel/introduction-to-python.git\n",
+    "%cd /content/introduction-to-python/\n",
+    "```\n"
    ]
   }
  ],
@@ -887,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
